style(client): add transparent border to nav-link to avoid flickering if no item was selected

--- a/client/src/styles/partials/_main.scss
+++ b/client/src/styles/partials/_main.scss
@@ -12,8 +12,12 @@
     text-transform: uppercase;
 }
 
+.nav-link {
+    border-bottom: solid transparent 2px;
+}
+
 .nav-link.active {
-    border-bottom: solid $primary 2px;
+    border-color: $primary;
 }
 
 body {
